# MacHub

./: CMakeLists.txt  Facebook.cpp  Facebook.r  IconListDef.cpp  IconListDef.h  IconListDef.r  Keys.h  MacHub.cpp  MacHub.vcxproj  MacHub.vcxproj.filters  ModuleManager.cpp  ModuleManager.h  Prefs.cpp  Prefs.h  Prefs.r  README.md  Util.cpp  Util.h  Weather.cpp  Weather.h  size.r  weather-icons-bw.r  weather-icons.ai  weather-icons.r
Modules/: Facebook.cpp  Facebook.h  Google.cpp  Google.h  Module.h  OAuthModule.cpp  OAuthModule.h  Weather.cpp  Weather.h
